Fix button styling on Safari browser

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -35,6 +35,9 @@ p {
     margin-top: 10px !important;
     border-radius: 10px !important;
     font-size: 20px !important;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 .primaryAction:hover, .custom-button:hover {
